# chat-mlx

./: .gitignore  Cargo.toml  LICENSE.md  README.md
examples/: chat.rs  complete.rs  structured.rs  tools.rs
src/: builder.rs  client.rs  config.rs  generate.rs  lib.rs  loader.rs  main.rs  model.rs  prompt.rs  sampler.rs
src/api/: completion.rs  mod.rs  stream.rs
src/api/types/: error.rs  request.rs  response.rs
src/engine/: cache.rs  config.rs  constraint.rs  generate.rs  mod.rs  model.rs  sampler.rs  template.rs
src/parsers/: json.rs  mod.rs  reasoning.rs  structured.rs  tool.rs
