[package]
name = "chat-mlx"
version = "0.0.0"
edition = "2024"
rust-version = "1.94"
description = "Standalone MLX inference playground for MiniCPM5 / Llama-family models on Apple Silicon."

[dependencies]
# Apple MLX array backend (Metal). Provides Array + ops + nn modules
# (Linear, Rope, RmsNorm, Embedding) + fast kernels (SDPA). We compose
# the architecture out of these; we do not write the math kernels.
mlx-rs = "0.25"

# Tokenizer + HF weight/config download (same stack the mlx-rs mistral example uses).
tokenizers = "0.22"
hf-hub = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rand = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
