[package]
name = "chat-mlx"
version = "0.0.0"
edition = "2024"
license = "MIT"
rust-version = "1.94"
description = "Local-inference chat-rs provider (and CLI) for MiniCPM5 / Llama / Qwen models on Apple Silicon via MLX."

[lib]
name = "chat_mlx"
path = "src/lib.rs"

[[bin]]
name = "chat-mlx"
path = "src/main.rs"

[[example]]
name = "chat"
required-features = ["stream"]

[[example]]
name = "structured"
required-features = ["stream"]

[dependencies]
mlx-rs = "0.25"

tokenizers = "0.22"
hf-hub = "0.4"

chat-core = { version = "0.4.2", features=["stream"] }
tools-rs = "0.3"
async-trait = "0.1"
schemars = "1"
tokio = { version = "1", features = ["rt", "macros", "sync"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

async-stream = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }
minijinja = "2"

[dev-dependencies]
tools_core = "0.3"
tools_macros = "0.3"
inventory = "0.3"
crossterm = { version = "0.29", features = ["event-stream"] }

[features]
default = ["stream"]
stream = ["chat-core/stream", "dep:async-stream", "dep:futures"]

[profile.release]
opt-level = 3
lto = "thin"
